Fixed some weird bugs on mobile

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -5,8 +5,12 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 50px;
   width: 90%;
   @include tablet {
+    margin-top: 0;
+    margin-bottom: 0;
     justify-content: space-between;
     flex-direction: row;
     width: 80%;
@@ -51,6 +55,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 100px;
+  @include tablet {
+    margin-bottom: 0;
+  }
 }
 
 .project {
@@ -152,25 +160,39 @@
 //contact me section
 .contact-section {
   display: flex;
-  width: 1000px;
+  flex-direction: column;
+  width: 90%;
   margin: 0 auto 50px;
+  @include desktop {
+    flex-direction: row;
+    width: 1000px;
+  }
   .contact-form {
-    width: 50%;
+    width: 100%;
+    @include desktop {
+      width: 50%;
+    }
     h4 {
       margin: 5px 0;
     }
     input {
-      width: 75%;
+      width: 95%;
       border: 2px solid $color__dark-green;
       border-radius: 3px;
       padding: 5px;
+      @include tablet {
+        width: 75%;
+      }
     }
     textarea {
-      width: 75%;
+      width: 95%;
       height: 100px;
       border: 2px solid $color__dark-green;
       border-radius: 3px;
       padding: 5px;
+      @include tablet {
+        width: 75%;
+      }
     }
     button {
       display: block;
@@ -191,7 +213,10 @@
   }
 
   .contact-information {
-    width: 50%;
+    width: 100%;
+    @include tablet {
+      width: 50%;
+    }
   }
 
   .contact-title {
@@ -222,6 +247,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 10%;
+  @include tablet {
+    margin-bottom: 0;
+  }
 }
 
 footer {
